# AudioRoute-SDK

./: .gitignore  .gitmodules  Developer Guide.html  LICENSE  README.md  build.gradle  gradle.properties  local.properties  maven  settings.gradle  updateSamples
DelayEffect/: CMakeLists.txt  build.gradle
DelayEffect/src/main/: AndroidManifest.xml
DelayEffect/src/main/jni/: jni_bridge.cpp
DelayEffect/src/main/res/layout/: activity_main.xml
DelayEffect/src/main/res/values/: strings.xml
SimpleSynth/: CMakeLists.txt  build.gradle
SimpleSynth/src/main/: AndroidManifest.xml
SimpleSynth/src/main/jni/: Android.mk  SimpleSynthActivity.cpp  simplesynth.cpp  simplesynth.h
SimpleSynth/src/main/res/drawable-xxhdpi/: key_black.xml  key_black_depressed.xml  key_white.xml  key_white_pressed.xml
SimpleSynth/src/main/res/layout/: activity_main.xml
SimpleSynth/src/main/res/values/: strings.xml
Transformation sample/: README
Transformation sample/After/: build.gradle  settings.gradle
Transformation sample/After/OpenSLES_Synth/: CMakeLists.txt  Makefile  build.gradle  project.properties
Transformation sample/After/OpenSLES_Synth/src/main/: AndroidManifest.xml
Transformation sample/After/gradle/wrapper/: gradle-wrapper.properties
Transformation sample/Before/: build.gradle  settings.gradle
Transformation sample/Before/OpenSLES_Synth/: .project  CMakeLists.txt  Makefile  build.gradle  project.properties
Transformation sample/Before/OpenSLES_Synth/src/main/: AndroidManifest.xml
Transformation sample/Before/gradle/wrapper/: gradle-wrapper.properties
audioroute/: CMakeLists.txt  build.gradle  proguard-rules.txt
audioroute/audioroute/: CMakeLists.txt  build.gradle  deobfuscate.map  gradle.properties
audioroute/include/: audio_module.h
audioroute/src/main/: AndroidManifest.xml
audioroute/src/main/jni/: audio_module.h
audioroute/src/main/jni/internal/: audioroute.c  shared_memory_internal.c  shared_memory_utils.c  simple_barrier.c
audioroute/src/main/jni/opensl_stream/: opensl_stream.c
audioroute/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
hostsample/: CMakeLists.txt  build.gradle
hostsample/src/main/: AndroidManifest.xml
hostsample/src/main/java/com/audioroute/hostsample/: AppListActivity.kt  AudioEngine.kt  Finger.java  Key.java  MainActivity.kt  MyData.kt  Piano.java  RecyclerViewAdapter.kt
hostsample/src/main/jni/: LiveEffectEngine.cpp  LiveEffectEngine.h  LockFreeQueue.h  jni_bridge.cpp
hostsample/src/main/res/animator/: zoomin.xml  zoomout.xml
hostsample/src/main/res/layout/: activity_app_list.xml  activity_main.xml  activity_piano.xml  list_item.xml
hostsample/src/main/res/menu/: items.xml
hostsample/src/main/res/values/: attrs.xml  colors.xml  styles.xml
(+65 files in other folders)
